# mdx-rust

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  PROGRESS.md  README.md  RELEASE.md  ROADMAP.md  SAFETY_INVARIANTS.md  SECURITY.md  clippy.toml  deny.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  quality.yml
crates/mdx-rust/: Cargo.toml
crates/mdx-rust-analysis/: Cargo.toml
crates/mdx-rust-analysis/src/: bundler.rs  editing.rs  finders.rs  hardening.rs  lib.rs  refactor.rs
crates/mdx-rust-core/: Cargo.toml
crates/mdx-rust-core/src/: agent_contract.rs  agent_runtime.rs  artifact.rs  benchmark.rs  config.rs  contracts.rs  eval.rs  evidence.rs  hardening.rs  hooks.rs  ledger.rs  lib.rs  llm.rs  optimizer.rs  performance.rs  policy.rs  refactor.rs  registry.rs  repo_context.rs  runner.rs  safety_pipeline.rs  security.rs  trace.rs
crates/mdx-rust-core/tests/: optimizer_integration.rs
crates/mdx-rust/src/: lib.rs  main.rs
crates/mdx-rust/tests/: json_mode.rs
docs/: api-stability.md  architecture.md  provenance.md  release-readiness.md
examples/evals/: cargo-check.json
examples/rig-minimal-agent/: Cargo.toml  README.md
examples/rig-minimal-agent/src/: main.rs
src/: main.rs
