[workspace]
resolver = "2"
members = [
    "crates/mdx-rust",
    "crates/mdx-rust-core",
    "crates/mdx-rust-analysis",
    "examples/rig-minimal-agent",
]

[workspace.package]
version = "1.0.0"
edition = "2021"
rust-version = "1.80"
license = "MIT"
repository = "https://github.com/dhotherm/mdx-rust"
homepage = "https://github.com/dhotherm/mdx-rust"

[workspace.dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive", "env"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = { version = "0.8", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
thiserror = "1"
tempfile = "3"
toml = "0.8"
ignore = "0.4"
proptest = "1"
rig = { package = "rig-core", version = "0.10" }
