[package]
name = "mdx-rust-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust source analysis, bundling, and safe editing for mdx-rust"
license.workspace = true
repository.workspace = true
publish = false

[dependencies]
anyhow.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true
ignore.workspace = true

# Code analysis
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
quote = "1"
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

[dev-dependencies]
tempfile.workspace = true