[package]
name = "mdx-rust-analysis"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust source analysis, bundling, and safe editing for mdx-rust"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agents", "rust", "analysis"]
categories = ["development-tools", "command-line-utilities"]
publish = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
schemars.workspace = true
ignore.workspace = true
tempfile.workspace = true

# Code analysis
syn = { version = "2", features = ["full", "parsing", "extra-traits"] }
tree-sitter = "0.20"
tree-sitter-rust = "0.20"

[dev-dependencies]
