[package]
name = "mdx-rust-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Core library for mdx-rust optimizer, safety, registry, and experiments"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agents", "rust", "optimizer"]
categories = ["development-tools", "command-line-utilities"]
publish = true

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tokio.workspace = true
tracing.workspace = true
thiserror.workspace = true
toml.workspace = true
mdx-rust-analysis = { path = "../mdx-rust-analysis", version = "0.3.0" }
rig.workspace = true

[dev-dependencies]
tempfile.workspace = true
serde_json.workspace = true
proptest.workspace = true
