[package]
name = "mdx-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust-native optimizer for LLM agents — CLI"
license.workspace = true
repository.workspace = true
publish = false

[[bin]]
name = "mdx-rust"
path = "src/main.rs"

[dependencies]
mdx-rust-core = { path = "../mdx-rust-core", version = "0.1.0" }
mdx-rust-analysis = { path = "../mdx-rust-analysis", version = "0.1.0" }

anyhow.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
