[package]
name = "mdx-rust"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Rust-native optimizer for LLM agents CLI"
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme = "../../README.md"
keywords = ["llm", "agents", "rust", "cli"]
categories = ["development-tools", "command-line-utilities"]
publish = true

[[bin]]
name = "mdx-rust"
path = "src/main.rs"

[dependencies]
mdx-rust-core = { path = "../mdx-rust-core", version = "0.2.0" }
mdx-rust-analysis = { path = "../mdx-rust-analysis", version = "0.2.0" }

anyhow.workspace = true
clap.workspace = true
schemars.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[dev-dependencies]
tempfile.workspace = true
